# manifold

./: CMakeLists.txt  Makefile
include/manifold/: S.h  SE3.h  SE3_impl.hpp  SO3.h  SO3.hpp  SO3_impl.hpp  S_impl.hpp  gradientDescent.h  gradientDescentSE3.h  gradientDescentSO3.h  manifold.h  newton.h  newtonSE3.h  newtonSO3.h
python/: testHessianComputations.py
src/: SO3.cpp
test/: S.cpp  SE3.cpp  SE3GD.cpp  SO3.cpp  SO3GD.cpp  SO3_gmm.cpp  SO3_incSurfNormAlign.cpp  g2pc.cpp
